--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "core-js": "^2.5.4",
     "jwt-decode": "github:auth0/jwt-decode",
+    "ngx-logger": "^3.0.5",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
   },
