--- a/web/package.json
+++ b/web/package.json
@@ -11,28 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.7",
-    "@angular/common": "^6.0.7",
-    "@angular/compiler": "^6.0.7",
-    "@angular/core": "^6.0.7",
-    "@angular/forms": "^6.0.7",
-    "@angular/http": "^6.0.7",
-    "@angular/platform-browser": "^6.0.7",
-    "@angular/platform-browser-dynamic": "^6.0.7",
-    "@angular/router": "^6.0.7",
+    "@angular/animations": "^6.1.6",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.1.6",
+    "@angular/compiler": "^6.1.6",
+    "@angular/core": "^6.1.6",
+    "@angular/forms": "^6.1.6",
+    "@angular/http": "^6.1.6",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "^6.1.6",
+    "@angular/platform-browser-dynamic": "^6.1.6",
+    "@angular/router": "^6.1.6",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jwt-decode": "github:auth0/jwt-decode",
     "ngx-logger": "^3.0.5",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
     "@angular/cli": "~6.0.0",
-    "@angular/compiler-cli": "^6.0.7",
-    "@angular/language-service": "^6.0.7",
+    "@angular/compiler-cli": "^6.1.6",
+    "@angular/language-service": "^6.1.6",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/jwt-decode": "^2.2.1",
