--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "http": "0.0.0",
     "http-proxy": "^1.17.0",
+    "npm": "^6.4.1",
     "request": "^2.87.0",
     "typescript": "^2.9.1"
   }
