--- a/web/package.json
+++ b/web/package.json
@@ -11,34 +11,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.8",
+    "@angular/animations": "^6.1.9",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.8",
-    "@angular/compiler": "^6.1.8",
-    "@angular/core": "^6.1.8",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
     "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^6.1.8",
-    "@angular/http": "^6.1.8",
+    "@angular/forms": "^6.1.9",
+    "@angular/http": "^6.1.9",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.8",
-    "@angular/platform-browser-dynamic": "^6.1.8",
-    "@angular/router": "^6.1.8",
+    "@angular/platform-browser": "^6.1.9",
+    "@angular/platform-browser-dynamic": "^6.1.9",
+    "@angular/router": "^6.1.9",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jwt-decode": "github:auth0/jwt-decode",
-    "ngx-logger": "^3.1.0",
-    "rxjs": "^6.3.2",
+    "ngx-logger": "^3.3.2",
+    "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "~6.0.0",
-    "@angular/compiler-cli": "^6.1.8",
-    "@angular/language-service": "^6.1.8",
+    "@angular/cli": "~6.2.3",
+    "@angular/compiler-cli": "^6.1.9",
+    "@angular/language-service": "^6.1.9",
     "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.4",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
@@ -52,6 +52,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.9.2"
   }
 }
